[package]
name = "iota-bindings"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
iota-trytes = { path = "../trytes", features = ["alloc"] }
iota-curl = { path = "../curl" }
iota-curl-cpu = { path = "../curl-cpu" }
iota-kerl= { path = "../kerl" }
iota-sign = { path = "../sign" }
iota-merkle = { path = "../merkle" }
iota-models = { path = "../models" }

iota-bindings-shared = { git = "https://github.com/iotaledger/iota-bindings.git"}

cty = { git = "https://github.com/japaric/cty.git" }


