[package]
name = "iota-curl-cpu"
version = "0.1.0"
authors = ["Paul D Handy <paul@pauldhandy.com>",
           "Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[features]
default = []

[dependencies]
iota-tmath = { path = "../tmath" }
iota-trytes = { path = "../trytes" }
iota-curl = { path = "../curl" }

