[package]
name = "iota-models"
version = "0.1.0"
authors = ["Paul D Handy <paul@pauldhandy.com>",
           "Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[features]
default = []
alloc = ["iota-trytes/alloc"]

[dependencies]
iota-trytes = { path = "../trytes" }

[dev-dependencies]
iota-trytes = { path = "../trytes", features = ["alloc"] }
