[package]
name = "iota-pow"
version = "0.1.0"
authors = ["Paul D Handy <paul@pauldhandy.com>",
           "Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[dependencies]
iota-curl = { path = "../curl" }
iota-trytes = { path = "../trytes" }
iota-tmath= { path = "../tmath" }
rayon = "*"
